# easydk

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  README_cn.md  config.h.in  edk_config.h.in  mps_config.h.in
infer_server/: CMakeLists.txt  config.h.in
infer_server/contrib/: opencv_frame.h  video_helper.h
infer_server/contrib/video/: preprocess_impl.h  preprocessor.cpp  video_frame.cpp
infer_server/include/: buffer.h  infer_server.h  processor.h  shape.h
infer_server/include/cnis/: buffer.h  infer_server.h  processor.h  shape.h
infer_server/include/util/: base_object.h
infer_server/python/: CMakeLists.txt  setup.py
infer_server/python/samples/: cnis_async_demo.py  cnis_infer_only_demo.py  cnis_sync_demo.py  sample_common.cpp  sample_utils.py
infer_server/python/src/: buffer_py_wrapper.cpp  cnis_py_wrapper.cpp  common_wrapper.cpp  common_wrapper.hpp  infer_server_py_wrapper.cpp  mlu_context_py_wrapper.cpp  model_py_wrapper.cpp  observer_py_wrapper.cpp  opencv_frame_py_wrapper.cpp  processor_py_wrapper.cpp  processor_py_wrapper.hpp  session_py_wrapper.cpp  shape_py_wrapper.cpp  video_helper_py_wrapper.cpp  video_processor_py_wrapper.cpp
infer_server/python/test/: buffer_test.py  infer_server_test.py  model_test.py  observer_test.py  opencv_frame_test.py  process_test.py  run_pytest.sh  session_test.py  shape_test.py  test_cpptest_wrapper.cpp  test_process_cpptest_wrapper.cpp  utils.py  video_helper_test.py  video_process_test.py
infer_server/samples/: CMakeLists.txt  demo.cpp  multi_stream_demo.cpp
infer_server/samples/postprocess/: postproc.h  ssd_postproc.cpp  yolov3_postprocMM.cpp  yolov5_postproc.cpp
infer_server/src/contrib/: preprocess_impl.h  preprocessor.cpp  processor_context.cpp  video_frame.cpp
infer_server/src/core/: buffer.cpp  cache.h  data_type.cpp  data_type.h  device.cpp  engine.cpp  engine.h  infer_server.cpp  priority.h  profile.h  request_ctrl.cpp  request_ctrl.h  session.cpp  session.h
infer_server/src/model/: mm_helper.h  model.cpp  model.h  model_cnrt.cpp  model_manager.cpp
infer_server/src/processor/: postprocessor.cpp  predictor.cpp  preprocessor.cpp  preprocessor_host.cpp
infer_server/src/util/: batcher.h  env.h  spinlock.h  thread_pool.cpp  thread_pool.h  threadsafe_queue.h  timer.cpp  timer.h
infer_server/tests/: CMakeLists.txt
infer_server/tests/api/: fixture.cpp  fixture.h  test_buffer.cpp  test_misc.cpp  test_model.cpp  test_processor.cpp  test_request.cpp  test_user_define.cpp
infer_server/tests/common/: test_base.h
infer_server/tests/unit/: half.cpp  half.h  main.cpp  test_batcher.cpp  test_cache.cpp  test_data_type.cpp  test_engine.cpp  test_env.cpp  test_executor.cpp  test_model.cpp  test_priority.cpp  test_request_ctrl.cpp  test_session.cpp  test_spinlock.cpp  test_tasknode.cpp  test_thread_pool.cpp  test_threadsafe_queue.cpp  test_timer.cpp
python/: CMakeLists.txt  setup.py
python/samples/: cnis_async_demo.py  cnis_infer_only_demo.py  cnis_sync_demo.py  sample_common.cpp  sample_utils.py
python/src/: cnis_py_wrapper.cpp  common_wrapper.cpp  common_wrapper.hpp  data_py_wrapper.cpp  infer_server_py_wrapper.cpp  model_py_wrapper.cpp  observer_py_wrapper.cpp  platform_py_wrapper.cpp  processor_py_wrapper.cpp  processor_py_wrapper.hpp  session_py_wrapper.cpp  shape_py_wrapper.cpp
python/test/: data_test.py  infer_server_test.py  model_test.py  observer_test.py  process_test.py  session_test.py  test_cpptest_wrapper.cpp  test_process_cpptest_wrapper.cpp  utils.py
samples/: CMakeLists.txt
samples/classification/: classification.cpp  classification_runner.cpp  classification_runner.h  run_resnet18_220.sh  run_resnet50_270.sh  run_resnet50_370.sh
samples/common/: cnosd.cpp  cnosd.h  cnpostproc.cpp  cnpostproc.h  feature_extractor.cpp  feature_extractor.h  runner.cpp  runner.h  utils.h  video_decoder.cpp  video_decoder.h  video_parser.cpp  video_parser.h
samples/common/postprocess/: classification_postproc.cpp  postproc.h  ssd_postproc.cpp  yolov3_postproc.cpp  yolov3_postprocMM.cpp  yolov5_postproc.cpp
samples/common/preprocess/: preproc.cpp  preproc.h  ssd_preproc.cpp
samples/easy_pipeline/: CMakeLists.txt  run_resnet50.sh  run_yolov3.sh  stream_app.cpp
samples/easy_pipeline/common/: ffmpeg_demuxer.h  framerate_contrller.h  threadsafe_queue.h
samples/easy_pipeline/decode/: sample_decode.cpp  sample_decode.hpp
samples/easy_pipeline/encode/: encode_handler_mlu.cpp  encode_handler_mlu.hpp  sample_encode.cpp  sample_encode.hpp
samples/easy_pipeline/framework/: easy_module.hpp  easy_pipeline.cpp  easy_pipeline.hpp  edk_frame.hpp
samples/easy_pipeline/inference/: sample_async_inference.cpp  sample_async_inference.hpp  sample_sync_inference.cpp  sample_sync_inference.hpp
samples/easy_pipeline/osd/: cnosd.cpp  cnosd.h  sample_osd.cpp  sample_osd.hpp
samples/simple_demo/: CMakeLists.txt
samples/simple_demo/classification/: classification.cpp  classification_runner.cpp  classification_runner.h  run_resnet50.sh
samples/simple_demo/common/: cnosd.cpp  cnosd.h  stream_runner.cpp  stream_runner.h  video_decoder.cpp  video_decoder.h  video_parser.cpp  video_parser.h
samples/stream-app/: CMakeLists.txt  cnpostproc.cpp  cnpostproc.h  detection_runner.cpp  detection_runner.h  feature_extractor.cpp  feature_extractor.h  run.sh  run_ssd_270.sh  run_yolov3_220.sh  run_yolov3_270.sh  run_yolov3_370.sh  run_yolov5_270.sh  stream_app.cpp
samples/transcode/: resize_yuv.cpp  resize_yuv.h  run_transcode.sh  transcode.cpp  transcode_runner.cpp  transcode_runner.h
tests/: CMakeLists.txt  coverage.sh  test.sh
tests/src/: main.cpp  test_base.cpp  test_base.h  test_decode.cpp  test_device.cpp  test_encode.cpp  test_half.cpp  test_infer.cpp  test_matrix.cpp  test_rcop.cpp  test_resize_yuv2yuv_invoke.cpp  test_track.cpp
unitest/: CMakeLists.txt
unitest/src/: main.cpp  test_base.cpp  test_base.h  test_bufsurface.cpp  test_bufsurface_util.cpp  test_decode.cpp  test_encode.cpp  test_platform.cpp  test_transform.cpp
unitest/src/infer_server/: fixture.cpp  (+20 more)
unitest/util/: ffmpeg_demuxer.h
(+205 files in other folders)
